[package]
name = "tiktoken"
version = "0.9.0"
edition = "2021"
rust-version = "1.57.0"

[lib]
name = "tiktoken"
crate-type = ["rlib"]

[[bin]]
name = "example"
path = "src/main.rs"

[dependencies]
# tiktoken dependencies
fancy-regex = "0.13.0"
regex = "1.10.3"
rustc-hash = "1.1.0"
bstr = "1.5.0"
phf = { version = "0.11", features = ["macros"] }
once_cell = "1.19.0"
base64 = "0.22.1"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
